<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SicurezzaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/round_button"
                android:src="@drawable/left_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/bloccoschermo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:padding="20dp"
                android:paddingEnd="40dp"
                android:text="@string/shermo"
                android:textSize="22dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="#14FFFFFF"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descrizioneshermo"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sospetti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:padding="20dp"
                android:paddingEnd="40dp"
                android:text="@string/accessosospetti"
                android:textSize="22dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="#14FFFFFF"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descrizionesospetti"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="?android:attr/listDivider" />


            <LinearLayout
                android:id="@+id/linearpass"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="textStart"
                    android:textSize="22dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:paddingRight="70dp"
                    android:drawableRight="@drawable/right"
                    android:text="@string/pass" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearautoriz"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/autoriz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="textStart"
                    android:textSize="22dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:paddingRight="70dp"
                    android:drawableRight="@drawable/right"
                    android:text="@string/autorizzazion" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lineardati"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/elimdati"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="textStart"
                    android:textSize="22dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:paddingRight="70dp"
                    android:drawableRight="@drawable/right"
                    android:text="@string/eliminazione" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>