<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_seed"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generali"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/right"
            android:drawablePadding="50dp"
            android:padding="10dp"
            android:text="@string/gen"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lingua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/right"
            android:drawablePadding="50dp"
            android:padding="10dp"
            android:text="@string/lingua"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/generali"
            app:layout_constraintStart_toStartOf="@+id/generali"
            app:layout_constraintTop_toBottomOf="@+id/generali" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/right"
            android:drawablePadding="50dp"
            android:padding="10dp"
            android:text="@string/privacy"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/generali"
            app:layout_constraintStart_toStartOf="@+id/generali"
            app:layout_constraintTop_toBottomOf="@+id/lingua" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/right"
            android:drawablePadding="50dp"
            android:padding="10dp"
            android:text="@string/policy"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/generali"
            app:layout_constraintStart_toStartOf="@+id/generali"
            app:layout_constraintTop_toBottomOf="@+id/privacy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sicurezza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/right"
            android:drawablePadding="50dp"
            android:padding="10dp"
            android:text="@string/sicurezza"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/generali"
            app:layout_constraintStart_toStartOf="@+id/generali"
            app:layout_constraintTop_toBottomOf="@+id/policy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/right"
            android:drawablePadding="50dp"
            android:padding="10dp"
            android:text="@string/community"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/generali"
            app:layout_constraintStart_toStartOf="@+id/generali"
            app:layout_constraintTop_toBottomOf="@+id/sicurezza" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>